--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
 
+    <licenses>
+        <license>
+            <name>MIT license</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
